--- a/pagina2.html
+++ b/pagina2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio 6</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -24,21 +24,21 @@
     <div id="carouselExample" class="carousel slide mt-4" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/Imagenes/zapatos 1.jpeg" class="d-block w-100" alt="Zapatos elegantes">
+                <img src="./Imagenes/zapatos 1.jpeg" class="d-block w-100" alt="Zapatos elegantes">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Zapatos de Vestir</h5>
                     <p>Perfectos para ocasiones especiales</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/Imagenes/zapatos 2.png" class="d-block w-100" alt="Tenis deportivos">
+                <img src="./Imagenes/zapatos 2.png" class="d-block w-100" alt="Tenis deportivos">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Tenis Deportivos</h5>
                     <p>Comodidad y estilo en cada paso</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/Imagenes/zapatos 3.jpeg" class="d-block w-100" alt="Botas de montaña">
+                <img src="./Imagenes/zapatos 3.jpeg" class="d-block w-100" alt="Botas de montaña">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Botas de Montaña</h5>
                     <p>Resistentes para cualquier aventura</p>
