--- a/pagina3.html
+++ b/pagina3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio 6</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img src="/Imagenes/zapatos 2.png" class="card-img-top" alt="Tenis Deportivos">
+                        <img src="./Imagenes/zapatos 2.png" class="card-img-top" alt="Tenis Deportivos">
                         <div class="card-body">
                             <h5 class="card-title">Tenis Deportivos</h5>
                             <p class="card-text">Diseño moderno para entrenamientos intensos.</p>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow-sm">
-                        <img src="/Imagenes/zapatos 3.jpeg" class="card-img-top" alt="Botas de Montaña">
+                        <img src="./Imagenes/zapatos 3.jpeg" class="card-img-top" alt="Botas de Montaña">
                         <div class="card-body">
                             <h5 class="card-title">Botas de Montaña</h5>
                             <p class="card-text">Perfectas para aventuras en terrenos difíciles.</p>
