Cambios hechos por Alan Jared

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         <img src="./Imagenes/Imagen.jpeg" alt="Bola amarilla sexy" class="img"><br>
         <b>Bienvenido al incio</b>
     </div>
+
+<p> Cambio hecho por Alan Jared </p>
+
 </body>
 </html>
